fix: various issues with overflow-btn

--- a/src/stylus/components/_overflow-buttons.styl
+++ b/src/stylus/components/_overflow-buttons.styl
@@ -25,6 +25,11 @@ theme(v-overflow-btn, "v-overflow-btn")
 .v-overflow-btn
   margin-top: 12px
 
+  &:not(.v-overflow-btn--editable)
+    .v-menu__activator,
+    .v-menu__activator *
+      cursor: pointer
+
   .v-select__slot
     height: 48px
 
@@ -41,6 +46,7 @@ theme(v-overflow-btn, "v-overflow-btn")
       content: none
 
   .v-label
+    margin-left: 16px
     top: calc(50% - 10px)
 
   .v-input__append-inner
@@ -69,9 +75,12 @@ theme(v-overflow-btn, "v-overflow-btn")
   &.v-input--is-focused,
   &.v-select--is-menu-active
     .v-input__slot
-      elevation(8)
+      elevation(2)
 
   &--segmented
+    .v-label
+      flex-shrink: 0
+
     .v-select__selections
       flex-wrap: nowrap
 
@@ -87,3 +96,8 @@ theme(v-overflow-btn, "v-overflow-btn")
 
           &::before
             background-color: transparent
+
+  &--editable
+    .v-input__append-inner,
+    .v-input__append-inner *
+      cursor: pointer
